@@ -499,6 +499,7 @@ sub gst_network_get_broadcast_ping_cmd
        "conectiva-10" => "debian-2.2",
        "fedora-1"     => "redhat-6.2",
        "fedora-2"     => "redhat-6.2",
+       "fedora-3"     => "redhat-6.2",
        "specifix"     => "redhat-6.2",
        "vine-3.0"     => "redhat-6.2",
        "vine-3.1"     => "redhat-6.2",
@@ -1777,6 +1778,7 @@ sub gst_network_get_file
     "pld-1.99"     => \&gst_network_pld10_get_file,
     "fedora-1"     => \&gst_network_rh72_get_file,
     "fedora-2"     => \&gst_network_rh72_get_file,
+    "fedora-3"     => \&gst_network_rh72_get_file,
     "specifix"     => \&gst_network_rh72_get_file,
     "vine-3.0"     => \&gst_network_rh62_get_file,
     "vine-3.1"     => \&gst_network_rh62_get_file,
@@ -3804,6 +3806,7 @@ sub gst_network_ensure_loopback_interface
     "pld-1.99"     => "lo",
     "fedora-1"     => "",
     "fedora-2"     => "",
+    "fedora-3"     => "",
     "specifix"     => "",
     "vine-3.0"     => "lo",
     "vine-3.1"     => "lo",
@@ -3928,6 +3931,7 @@ sub gst_network_get_parse_table
     "pld-1.99"     => "pld-1.0",
     "fedora-1"     => "redhat-7.2",
     "fedora-2"     => "redhat-7.2",
+    "fedora-3"     => "redhat-7.2",
     "specifix"     => "redhat-7.2",
     "vine-3.0"     => "redhat-7.0",
     "vine-3.1"     => "redhat-7.0",
@@ -4335,6 +4339,7 @@ sub gst_network_get_interface_parse_table
     "pld-1.99"     => "pld-1.0",
     "fedora-1"     => "redhat-7.2",
     "fedora-2"     => "redhat-7.2",
+    "fedora-3"     => "redhat-7.2",
     "specifix"     => "redhat-7.2",
     "vine-3.0"     => "vine-3.0",
     "vine-3.1"     => "vine-3.0",
@@ -5149,6 +5154,7 @@ sub gst_network_get_replace_table
     "pld-1.99"     => "pld-1.0",
     "fedora-1"     => "redhat-7.2",
     "fedora-2"     => "redhat-7.2",
+    "fedora-3"     => "redhat-7.2",
     "specifix"     => "redhat-7.2",
     "vine-3.0"     => "redhat-7.0",
     "vine-3.1"     => "redhat-7.0",
@@ -5542,6 +5548,7 @@ sub gst_network_get_interface_replace_table
     "pld-1.99"     => "pld-1.0",
     "fedora-1"     => "redhat-7.2",
     "fedora-2"     => "redhat-7.2",
+    "fedora-3"     => "redhat-7.2",
     "specifix"     => "redhat-7.2",
     "vine-3.0"     => "vine-3.0",
     "vine-3.1"     => "vine-3.0",
